# gin

./: .gitignore  CMakeLists.txt  LICENSE
doc/: definitions.json
include/: calculate.h  candle.h  config.h  engine.h  instrument.h  order.h  position.h  wallet.h
include/bfx-api-cpp/: BitfinexAPI.hpp  HTTPRequest.hpp  bfxApiV2.hpp  bfxConf.hpp  jsonutils.hpp  tickers.hpp
src/: calculate.cpp  candle.cpp  config.cpp  engine.cpp  example.cpp  instrument.cpp  position.cpp  wallet.cpp
tulipindicators-0.8.0/: example1  example2  fuzzer  sample  smoke
